# CppClientServer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  download-dependency.sh  lldb_cheatsheet.md  main.cpp  timestamps.txt
apps/receiver/include/: FileWriter.hpp  TimestampsLogger.hpp
apps/sender/include/: FileReader.hpp
cmake/: BoostBuildHelper.cmake  GoogleTestHelper.cmake
modules/app_receiver/: CMakeLists.txt
modules/app_receiver/include/: Utils.hpp
modules/app_receiver/src/: main.cpp
modules/app_sender/: CMakeLists.txt
modules/app_sender/include/: Utils.hpp  VideoFileReader.hpp
modules/app_sender/src/: main.cpp
modules/client/: CMakeLists.txt
modules/client/include/: Client.h  GenericClient.h  IClient.h  TCPClient.h  UDPClient.h  policy_tcp_boost.hpp  policy_udp_boost.hpp
modules/client/src/: Client.cpp  TCPClient.cpp  UDPClient.cpp
modules/client/test/: ClientTests.cpp
modules/server/: CMakeLists.txt
modules/server/include/: BoostUDPPolicy.hpp  Error_Server.h  GenericServer.h  GenericServer.hpp  IServer.h  ModePolicy.hpp  Server.h  UDPServer.h  UDPServer.hpp  logging.hpp  policy_mode.hpp  policy_tcp_boost.hpp  policy_udp_boost.hpp  server_error.h
modules/server/src/: Server.cpp  UDPServer.cpp  server_error.cpp
modules/server/test/: UDPServerTests.cpp
tests/: CMakeLists.txt  example_test.cpp
